# Multicode_V3

./: .gitignore  .prettierignore  .prettierrc.cjs  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NODE_EDITOR_MANUAL_TESTS.md  README-desktop.md  README.md  RULES.md  package-lock.json  package.json
.github/workflows/: ci.yml  desktop.yml
archived/frontend/: .depcheckrc  README.md  package.json  playwright.config.ts  settings.json
archived/frontend/e2e/: node-editor.html
archived/frontend/src/: code-sync.ts  hotkeys.css  index.html
archived/frontend/tests/: code-sync.test.ts  snippets.test.ts  visual_sync.test.ts
archived/scripts/: clean.js  copy-backend.cjs  dev.js
backend/: Cargo.toml  build.rs  meta.schema.json  tauri.conf.json
backend/src/: blocks.rs  config.rs  export.rs  git.rs  lib.rs  main.rs  search.rs  server.rs
backend/src/blocks/: cache.rs  enrich.rs  mod.rs
backend/src/i18n/: mod.rs
backend/src/meta/: db.rs  id_registry.rs  mod.rs  query.rs  types.rs  watch.rs
backend/src/parser/: css.rs  go.rs  html.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
backend/src/plugins/: mod.rs  wasm.rs
backend/tests/: cli.rs  commit.rs  css.rs  diff.rs  export.rs  html.rs  id_registry.rs  javascript.rs  links.rs  parse_sync.rs  parser_errors.rs  plugins_update.rs  python.rs  rust.rs  server_error_format.rs  server_errors.rs  tags.rs  version.rs  viz_comments.rs  viz_document.rs
core/: Cargo.toml
core/src/: config.rs  debugger.rs  export.rs  git.rs  lib.rs  organs.rs  search.rs  viz_lint.rs
core/src/blocks/: cache.rs  enrich.rs  mod.rs  parsing.rs
core/src/i18n/: mod.rs
core/src/meta/: comment_detector.rs  db.rs  id_registry.rs  mod.rs  query.rs  types.rs  watch.rs
core/src/parser/: c.rs  c_sharp.rs  cpp.rs  css.rs  java.rs  javascript.rs  mod.rs  typescript.rs  viz_comments.rs
core/src/parser/tests/: mod.rs
core/tests/: commit.rs  css.rs  diff.rs  export.rs  html.rs  id_registry.rs  javascript.rs  links.rs  merge.rs  parse_sync.rs  parser_errors.rs  python.rs  rust.rs  tags.rs  version.rs  viz_comments.rs  viz_document.rs  viz_lint.rs
desktop/: Cargo.toml  LICENSE
desktop/assets/: terminal-help.md
desktop/benches/: search.rs  sync_engine_bench.rs
desktop/src/: lib.rs  main.rs  modal.rs
desktop/src/app/: actions.rs  command_palette.rs  command_translations.rs  diff.rs  io.rs  log_translations.rs  mod.rs  search_translations.rs  settings_translations.rs  state.rs  ui.rs  view.rs
desktop/src/app/events/: handler.rs  message.rs  mod.rs
desktop/src/components/: file_manager.rs  mod.rs
desktop/src/editor/: autocomplete.rs  code_editor.rs  code_editor_tests.rs  meta_integration.rs  meta_integration_tests.rs  mod.rs  settings.rs  syntax_highlighter.rs
desktop/src/search/: fuzzy.rs  hotkeys.rs  index.rs  mod.rs  settings.rs
desktop/src/sync/: ast_parser.rs  async_manager.rs  async_manager_tests.rs  change_tracker.rs  code_generator.rs  conflict_resolver.rs  element_mapper.rs  engine.rs  engine_tests.rs  extension_tests.rs  file_watcher.rs  file_watcher_tests.rs  mod.rs  settings.rs
desktop/src/ui/: conflict_dialog.rs  main_layout.rs  mod.rs  sync_indicators.rs
desktop/src/ui/main_layout/: mod.rs  state.rs  update.rs  view.rs
desktop/src/visual/: canvas.rs  change.rs  connection_draw.rs  connections.rs  connections_tests.rs  mod.rs  palette.rs  serialization.rs  serialization_tests.rs  suggestions.rs  translations.rs
desktop/src/visual/blocks/: arithmetic.rs  conditional.rs  functions.rs  loops.rs  mod.rs  variables.rs
desktop/tests/: log_format.rs  main_ui.rs  search_index.rs  smoke.rs  sync_engine.rs  view_mode_persistence.rs
docs/: assistant_manual.md  automatic-population.md  dependency-update.md  event-bus-plugin-example.md  features.md  frontend-desktop-missing-functions.md  frontend-desktop-overview.md  glossary.md  layout-format.md  localization.md  memory_nodes.md  meta-comments.md  modules.md  node-lifecycle.md  plugin-guide.md  plugins.md  repo-structure.md  support-systems.md  sync.md
docs/neira/: README.md  action-nodes.md  analysis-architecture.md  analysis-nodes.md  deployment.md  faq.md  glossary.md  governance-structure.md  memory-nodes.md  motivation.md  node-template.md  personality.md  practical-guide.md  roadmap.md  source-policy.md  support-systems.md  testing.md  tiny-llama-integration.md  training.md  usage-example.md
examples/: package-isolated.manifest  package.manifest  test.html  test.js  test.py  test.rs
examples/plugins/: README.md  my-block.js  my_plugin.rs
examples/widget_app/: index.html  main.js
frontend/: README.md  package-lock.json  package.json  settings.json
frontend/e2e/: node-editor.spec.ts
frontend/scripts/: format.js
frontend/src/: compare.html  hotkeys.css  index.html  macros.test.ts  macros.ts  monaco-languages.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src/editor/: autocomplete.js  command-palette.ts  git-blame.js  goto-line.js  history.js  meta.schema.json  minimap.ts  navigation.js  todo-highlight.js  visual-meta.js  (+1 more)
frontend/tests/: importer_viz.test.ts  reroute.test.ts  splitView.test.ts  visual_sync.test.ts
legacy-backend/: Cargo.toml
legacy-backend/src/: config.rs  debugger.rs  lib.rs  main.rs  search.rs  server.rs  viz_lint.rs
legacy-backend/tests/: commit.rs  merge.rs  python.rs  read_memory.rs  rust.rs  server_error_format.rs  tags.rs  version.rs  viz_lint.rs
plugins/editor-utils/: codemirror.js  diffPatch.js  eventBus.js  index.js  metadata.js  package.json
plugins/example/: index.ts  package.json
plugins/lsp/: README.md  eslint.config.js  package.json  server.js
schemas/: analysis-node.schema.json  analysis-result.schema.json  node-template.schema.json
scripts/: build.js  build_appimage.sh  check-env.js  check-gdk.js  check-scripts.js  ci_backend.sh  ci_node.sh  clean.js  copy-backend.cjs  dev.js  installer.iss  macos_bundle.sh  run-tests.js  setup.js  test.js  unhandled.test.js  utils.js  utils.test.js
Документы/: Процесс разработки.md  Усиление защиты от конфликтов.md  улучшения_readMemory.md
(+108 files in other folders)
