[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "1", default-features = false }
serde_json = "1"
axum = { version = "0.6", features = ["ws", "json"] }
tokio-tungstenite = "0.20"
futures = "0.3"
tree-sitter = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-python = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-go = "0.23"
tree-sitter-typescript = "0.23"
syn = { version = "2", features = ["full"] }
quote = "1"
prettyplease = "0.2"
git2 = "0.18"
regex = "1"
once_cell = "1"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
config = "0.13"
libloading = "0.8"
notify = "5"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# CLI argument parser
clap = { version = "4", features = ["derive"] }
wasmtime = "10"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

schemars = { version = "0.8", features = ["derive", "chrono"] }

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "1", default-features = false }
schemars = { version = "0.8", features = ["derive", "chrono"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
