[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
iced = { version = "0.12", features = ["tokio"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multicode_core = { package = "core", path = "../core", features = ["git", "watch", "export"] }
