[package]
name = "desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
iced = { version = "0.12", features = ["tokio", "advanced", "svg", "canvas"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs", "process", "io-util"] }
directories = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
multicode_core = { package = "core", path = "../core", features = ["git", "watch", "export"] }
rfd = "0.15"
syntect = "5"
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
pulldown-cmark = "0.9"
regex = "1"
lru = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree-sitter = "0.23"
indexmap = "2"

# app modules: state, actions, view

[dev-dependencies]
tempfile = "3"
criterion = "0.5"
tracing-test = "0.2"

[[bench]]
name = "search"
harness = false
